# web-extension-experiment

./: -  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
decisions-log/: 2025-01-20-safari-extension-parity-decisions.md  2025-08-10-project-setup-decisions.md  2025-08-11-analysis-engine-implementation.md  2025-08-11-recent-development-decisions.md  2025-08-12-chrome-firefox-parity-decisions.md  2025-08-12-e2e-and-parity-decisions.md  2025-08-14-wasm-mv3-loader-and-testing.md  2025-08-20-wasm-result-type-handling-fixes.md  README.md
diagrams/: README.md  architecture-overview.md  build-pipeline.md  export-diagrams.sh  extension-workflow.md  wasm-module-architecture.md
docs/: analysis.md  implementation-gaps-analysis.md  implementation-status.md  missing-tests-plan.md  performance-metrics-implementation.md  plan.md  test-priorities-summary.md
extensions/chrome/: README.md  jest.config.js  (+3 more)
scripts/: README.md
shared/: PROTO.md  README.md  jest.config.js  package.json  tsconfig.json
test-page/: index.html  test-page.html
tests/: EXTENSION_TESTING.md  README.md  jest.config.js  package.json  playwright.config.ts  safari-debug.html  safari-minimal-test.html  safari-simple-test.html  test-page.html  test-wasm-loading.html  tsconfig.json
wasm/: Cargo.toml  README.md  package.json  test_streaming.html
wasm/src/: lib.rs  streaming.rs  types.rs
wasm/src/__tests__/: large_file_processing.test.rs
wasm/src/analysis/: entropy.rs  frequency.rs  mod.rs  phrases.rs  pii.rs
wasm/src/utils/: mod.rs  stream.rs  text.rs
(+102 files in other folders)
