[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "Rust WebAssembly module for file analysis and security scanning"
license = "MIT"
repository = "https://github.com/squarex/browser-extension"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
regex = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
lazy_static = "1.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "analysis_benchmarks"
# harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
